# mCal

./: .gitignore  CMakeLists.txt  README.md  windows.cmake
lib/: strptime.h
src/: EntryMan.c  EntryMan.h  GUIContent.c  GUIContent.h  GUITask.c  GUITask.h  Logger.c  Logger.h  MenuMan.c  MenuMan.h  SQL.c  SQL.h  defs.h  main.c  main.h
tests/: DLLtests.c  SQLtest.c
